// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBoundary passes through if non-error 1`] = `
<DocumentFragment>
  <div
    class="heroPage defaultPadding"
  >
    <div
      class="icon"
    >
      <alertcircleicon />
    </div>
    <div
      class="title"
    >
      Error
    </div>
    <div
      class="subtitle"
      data-testid="hero-page-subtitle"
    >
      <div
        class="container"
      >
        <p>
          Sourcegraph encountered an unexpected error. If reloading the page doesn't fix it, contact your site admin or Sourcegraph support.
        </p>
        <p>
          <code
            class="text-wrap"
          >
            x
          </code>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ErrorBoundary renders error page if error 1`] = `
<DocumentFragment>
  <span>
    hello
  </span>
</DocumentFragment>
`;

exports[`ErrorBoundary renders reload page if chunk error 1`] = `
<DocumentFragment>
  <div
    class="heroPage defaultPadding"
  >
    <div
      class="icon"
    >
      <reloadicon />
    </div>
    <div
      class="title"
    >
      Reload required
    </div>
    <div
      class="subtitle"
      data-testid="hero-page-subtitle"
    >
      <div
        class="container"
      >
        <p>
          A new version of Sourcegraph is available.
        </p>
        <button
          class="btn btnPrimary"
          type="button"
        >
          Reload to update
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
